traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;

override def run() {
  ecritMessage("0")
  var cpt = 0
  var gauche = false
  var cote = false
  while (!posFinale()) {
    	var x = posSuivante()
    	cpt += 1
    	gauche = x(0)
    	cote = x(1)
    	ecritMessage(cpt)
    	
  }
}


def posFinale() : Boolean = {
  return ((getMondeLargeur() - 1 == getX()) && (getY() == getMondeHauteur() - 1))
}



def posSuivante() {
  if (getX() == getMondeLargeur() - 1  || getY() == 0){
    	if diag < 8 {
    			setPos( 0 , getY() + 1)
        	return diag + 1}
    	else {
    			setPos(getX() + 1 , getMondeHauteur() - 1)
        	return diag + 1 }
  }
  else {
    	setPos(getX() + 1, getY() - 1 )
  }